# AnalogBoard

./: .editorconfig  .git_commit_msg.txt  .gitattributes  .gitignore  AGENTS.md  AnalogBoard_TestApp.sln  BUILD.md  README.md  commit_msg.txt  global.json  goal.md  golden_reference.py  prompt.md
.agent/: refactor.md  review.md
AnalogBoard_Dll/: AnalogBoard_Dll.cpp  AnalogBoard_Dll.def  AnalogBoard_Dll.h  AnalogBoard_Dll.rc  AnalogBoard_Dll.vcxproj  AnalogBoard_Dll.vcxproj.filters  AnalogBoard_Dll.vcxproj.xml  Ep4FailureDiagnostic.h  Ep6TransferRetryPolicy.h  Ep6TransferTuningPolicy.h  Resource.h  UsbEndpointDiscoveryPolicy.h  UsbTransferHelpers.h  framework.h  pch.h
AnalogBoard_Dll/res/: AnalogBoard_Dll.rc2
AnalogBoard_TestApp/: AcquisitionCompletionLogic.h  AcquisitionCycleRecoveryPolicy.h  AcquisitionLogMessageFormatter.h  AcquisitionPerfMetrics.h  AcquisitionRunMetadata.h  AcquisitionShutdownCoordinator.h  AnalogBoardTestApp.rc  AnalogBoard_TestApp.cpp  AnalogBoard_TestApp.h  AnalogBoard_TestApp.vcxproj  AnalogBoard_TestApp.vcxproj.filters  AnalogBoard_TestApp.vcxproj.xml  AnalogBoard_TestAppDlg.cpp  AnalogBoard_TestAppDlg.h  CColorEdit.cpp  CColorEdit.h  Dialog1_Main.cpp  Dialog1_Main.h  Dialog2_Debug.cpp  Dialog2_Debug.h  DialogMainBindingPolicy.h  Ep6TimeoutRecoveryPolicy.h  ExternalTriggerPollingPolicy.h  FileIoLoggingPolicy.h  FileLogger.h  FpgaRegisterAddress.h  FpgaRegisterEncoding.h  FpgaRegisterLogic.h  ReadRequestBurstPolicy.h  RearmTelemetry.h  SavePathValidation.cpp  SavePathValidation.h  WaveAcquisitionEngine.cpp  WaveAcquisitionEngine.h  WaveDataFileIO.h  WaveDataPublishLogic.cpp  WaveDataPublishLogic.h  WaveFilePublish.cpp  WaveFilePublish.h  WavePairPublishPolicy.h  (+2 more)
AnalogBoard_TestApp/res/: AnalogBoardTestApp.rc2
AnalogBoard_UnitTest/: AcquisitionCompletionLogic_test.cpp  AcquisitionCycleRecoveryPolicy_test.cpp  AcquisitionLogMessageFormatter_test.cpp  AcquisitionPerfMetrics_test.cpp  AcquisitionRunMetadata_test.cpp  AcquisitionShutdownCoordinator_test.cpp  BlockingQueue_test.cpp  DialogMainBindingPolicy_test.cpp  Ep4FailureDiagnostic_test.cpp  Ep6TransferRetryPolicy_test.cpp  Ep6TransferTuningPolicy_test.cpp  ExternalTriggerPollingPolicy_test.cpp  FileIoLoggingPolicy_test.cpp  FileLogger_test.cpp  FpgaRegisterLogic_test.cpp  ReadRequestBurstPolicy_test.cpp  RearmTelemetryReplay_test.cpp  RearmTelemetry_test.cpp  SavePathValidation_test.cpp  SimulationRunnerIntegration_test.cpp  SimulationScenario_test.cpp  Sysmex_AnalogBoard_UnitTest.cpp  Sysmex_AnalogBoard_UnitTest.vcxproj  Sysmex_AnalogBoard_UnitTest.vcxproj.filters  Sysmex_AnalogBoard_UnitTest.vcxproj.xml  TestFramework.h  UsbEndpointDiscoveryPolicy_test.cpp  UsbTransferHelpers_test.cpp  WaveAcquisitionEngine_test.cpp  WaveDataFileIO_test.cpp  WavePairPublishPolicy_test.cpp  build_ep4_failure_diagnostic_test.bat  build_telemetry_graceful_stop_test.bat  build_test.bat
Sysmex_AnalogBoard_SimRunner/: FpgaDdrModel.h  SimulationEp4StatusHelper.h  SimulationRunnerCore.cpp  SimulationRunnerCore.h  SimulationScenario.cpp  SimulationScenario.h  Sysmex_AnalogBoard_SimRunner.vcxproj  Sysmex_AnalogBoard_SimRunner.vcxproj.filters  main.cpp
artifacts/: README.md
branch_plan/: 2026-03-12-codex-worktree-prompts.md  2026-03-12-temporary-branch-closure-checklist.md  2026-03-12-two-branch-convergence-roadmap.md  README.md
data/sim_scenarios/: burst_boundary_stress.json  empty_capture.json  ep6_timeout_once_then_recover.json  ep6_timeout_persistent.json  high_density_timeout_active.json  normal_complete.json  publish_fail.json  slow_producer.json  (+4 more)
docs/: 2026-03-02-usb-acquisition-stability-architecture.md  2026-03-02-usb-acquisition-stability-checklist.md  2026-03-02-usb-acquisition-stability-execution.md  2026-03-02-usb-acquisition-stability-field-reference.md  2026-03-02-usb-acquisition-stability-log.md  2026-03-02-usb-acquisition-stability.md  2026-03-09-test-perspective-catalog-checklist.md  2026-03-11-ep6-local-buffer-fix-checklist.md  2026-03-11-ep6-local-buffer-fix-log.md  2026-03-11-review-findings-fix-checklist.md  2026-03-11-review-findings-fix-log.md  2026-03-11-simrunner-review-followups-checklist.md  2026-03-11-simulation-scenario-parser-hardening-checklist.md  2026-03-11-warning-cleanup-log.md  2026-03-12-simulation-regression-coverage-checklist.md  2026-03-12-waveacquisition-020-fix-checklist.md  2026-03-12-waveacquisition-stale-ddrwrend-followup-checklist.md  2026-03-17-lab-semantics-rdwait-wstop-checklist.md  2026-03-19-engine-context-hex-format-checklist.md  2026-07-07-win11-driver-compat-recreate-checklist.md  260706-field-session-runbook.html  260709-analogboard-sysapp-integration-study.html  BUILD.md  CyUSB.md  IMPLEMENTATION_TRACKING.md  INDEX.md  SIMULATION.md  application_specification_initial.md  baseline_next.md  driver_next.md  gain-adjustment-manual.html  git-migrate-analogboard-linux.md  initial-commit-architecture.md  knowledge_inventory.md  lab_next.md
prototypes/zarr-store-roundtrip/: CMakeLists.txt  README.md
prototypes/zarr-store-roundtrip/include/p0s/: aead_store.h  atomic_file.h  blosc_adapter.h  error.h  minimal_zarr_writer.h  store_contract.h  strict_json.h
prototypes/zarr-store-roundtrip/scripts/: compare_sharding_modes.py  validate_gcsa_roundtrip.py  validate_offline_bundle.py  verify_windows_artifacts.py
prototypes/zarr-store-roundtrip/src/: aead_store.cpp  atomic_file.cpp  blosc_adapter.cpp  minimal_zarr_writer.cpp  strict_json.cpp
prototypes/zarr-store-roundtrip/tests/: adapter_tests.cpp  kat_matrix_tests.cpp  store_writer_tests.cpp  test_compare_sharding_modes.py  test_focused_verification_script.py  test_validate_gcsa_roundtrip.py  test_validate_offline_bundle.py  test_verify_windows_artifacts.py
prototypes/zarr-store-roundtrip/tools/: store_generator.cpp
scripts/: build_ep4_failure_diagnostic.bat  build_telemetry_graceful_stop.bat  finalize_ep4_failure_diagnostic_build.ps1  finalize_telemetry_graceful_stop_build.ps1  run_coverage.bat  run_simulation.bat  run_with_vsdevcmd.bat
tasks/: todo.md  todo_archive.md
tests/: wave_file_publish_test.cpp
(+373 files in other folders)
